# flaky-test-detective

./: AGENTS.md  DECISIONS.md  DESIGN.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  flaky-detective.yml
fixtures/flaky-repo/: pyproject.toml  test_race.py  test_shared.py  test_time.py
src/detective/: cli.py  models.py
src/detective/classify/: __init__.py  heuristics.py  llm_analyzer.py
src/detective/fix/: __init__.py  patcher.py
src/detective/ingest/: __init__.py  github_actions.py  junit_parser.py
src/detective/pr/: __init__.py  github_pr.py
src/detective/repro/: __init__.py  perturb.py  runner.py
tests/: test_cli.py  test_cli_repo.py  test_models.py
tests/classify/: test_heuristics.py  test_llm_analyzer.py
tests/fix/: test_patcher.py
tests/ingest/: test_github_actions.py  test_junit_parser.py
tests/pr/: test_github_pr.py
tests/repro/: test_perturb.py  test_runner.py
